# aws-lambda-persistence

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish-to-pypi.yml
aws_lambda_persistence/: __init__.py
cloudformation/: README.md  aws_lambda_persistence_layer.yaml  aws_lambda_persistence_sam_layer.yaml  test_aws_lambda_persistence_layer.yaml
