[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "aws-lambda-persistence"
version = "1.0.0"
description = 'A Python module that enables AWS Lambda functions to maintain state and persist data between invocations by writing to a dict-like variable. It achieves this by using the DynamoDB free tier and so it can be used without adding any costs to your project.'
readme = "README.md"
requires-python = ">=3.10"
license = "GPL-3.0-or-later"
keywords = ["aws", "lambda"]
authors = [
  { name = "Gene Wood", email = "gene_wood@cementhorizon.com" },
]
maintainers = [
  { name = "Gene Wood", email = "gene_wood@cementhorizon.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
  "boto3",
  "botocore"
]

[project.urls]
Documentation = "https://github.com/gene1wood/aws-lambda-persistence#readme"
Issues = "https://github.com/gene1wood/aws-lambda-persistence/issues"
Source = "https://github.com/gene1wood/aws-lambda-persistence"
